--- a/CADD06018-Architecture/SP/CADD06021-01-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
+++ b/CADD06018-Architecture/SP/CADD06021-01-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
@@ -1,12 +1,12 @@
 \input{./HeadMatter.tex}
 	
-\part*{Assignment 1 (33\%) - Detached 2 Storey Residence}
+\part*{Assignment 1 (35\%) - Detached 2 Storey Residence}
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & As stated on MS Teams \\
+	\textbf{Issue Date:} & 13-Feb-24 \\
 	\hline 
-	\textbf{Submission Date:}  & As stated on MS Teams \\
+	\textbf{Submission Date:}  & 9-March=24 \\
 	\hline
 \end{tabularx}
 
@@ -157,7 +157,7 @@ The total floor area of the house should be approx 150$m^2$\\
 
 The following design may be used as a guide.  You may modify the proportions provided you maintain a protrusion at the front of the building.
 
-\subsection{Ground Floor}
+\subsection*{Ground Floor}
 \begin{itemize}
 	\item Entrance Hall (2400mm wide)
 	\item Universally Accessible Bathroom / Toilet
@@ -179,7 +179,7 @@ The following design may be used as a guide.  You may modify the proportions pro
 
 
 \newpage
-\subsection{Upper Floor Floor}
+\subsection*{Upper Floor Floor}
 \begin{itemize}
 	\item 3 Bedrooms with en-suite sanitary facilities
 	\item Main Bathroom with Bath or Shower, WC and sink
