--- a/CADD06018-Architecture/SP/CADD06021-02-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
+++ b/CADD06018-Architecture/SP/CADD06021-02-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
@@ -4,9 +4,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 14$^{th}$ March 2023\\
+	\textbf{Issue Date:} & 27$^{th}$ Feb 2024\\
 	\hline 
-	\textbf{Submission Date:}  & 23$^{rd}$ April 2023  \\
+	\textbf{Submission Date:}  & 13$^{th}$ April 2024  \\
 	\hline
 \end{tabularx}
 
