--- a/CADD06018-Architecture/SP/CADD06021-03-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
+++ b/CADD06018-Architecture/SP/CADD06021-03-X-X-XXX-SP-TUS-AR-0001-P9-D-0.tex
@@ -7,9 +7,9 @@
 
 \begin{tabularx}{\textwidth}{ |X|X| }
 	\hline
-	\textbf{Issue Date:} & 4$^{th}$ April 2023 \\
+	\textbf{Issue Date:} & 19$^{th}$ March 2024 \\
 	\hline 
-	\textbf{Submission Date:}  & 29$^{th}$ April 2023  \\
+	\textbf{Submission Date:}  & 20$^{th}$ April 2024  \\
 	\hline
 \end{tabularx}
 
@@ -91,7 +91,7 @@ Using the Residential model developed for Assignment 1, make the following amend
 		\item Call-out Detail of the Ground Floor / External Wall / Foundation interface @ 1:20
 	\end{itemize}
 	\item The filenames should be of the form used in NA-2021 to I.S. EN ISO 19650-2-2018
-	.  In this case, it will \textit{CADD06021-03-X-X-XXX-SP-\#\#\#-AR-0010-P9-D-0}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'CADD06021-03-X-X-XXX-SP-920-AR-0010-P9-D-0'}, for K-number K20001920.
+	.  In this case, it will \textit{CADD06021-03-X-X-XXX-SP-\#\#\#-AR-0010-P9-D-2}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'CADD06021-03-X-X-XXX-SP-920-AR-0010-P9-D-2'}, for K-number K20001920.
 \end{enumerate}
 
 
@@ -126,17 +126,17 @@ Using the Commercial Building model developed for Assignment 2, make the followi
 		\item Internal view of one retail unit facing the curtain wall, and picking up the stairs
 		\item Internal view of your choice from the First Floor landing 
 	\end{itemize} 
-	\item Solar Study: Create a solar study for the 16\textsuperscript{th} of June 2023 and place a view of 14:30 hours onto sheet AR-0020.  Render your image using the 'shaded' setting; do not fully render.  
+	\item Solar Study: Create a solar study for the 16\textsuperscript{th} of June 2024 and place a view of 14:30 hours onto sheet AR-0020.  Render your image using the 'shaded' setting; do not fully render.  
 	\item Walk-throughs: Create the following walk-throughs using the 'Shaded' setting.  Do not fully render the animation.  The maximum number of frames required is 300.
-	\item Sloping Toposurface: Create a sloped topographical surface (approx 80m x 90m) incorporating a slope from approx 5m hight at the rear, and 8.0m out from the building, to -225mm at the front of the building, and over the front area of the site.
+	\item Sloping Toposolid: Create a sloped topographical solid (approx 80m x 90m) incorporating a slope from approx 5m hight at the rear, and 8.0m out from the building, to -225mm at the front of the building, and over the front area of the site.
 	\begin{itemize}
-		\item Create a Building Pad incorporating an 8.0m hard-stand area to the rear and sides of the Retail Unit block and approx 15.0m at the front
+		\item Create a 8.0m hard-stand area to the rear and sides of the Retail Unit block and approx 15.0m at the front
 		\item Create a parking area for cars to the front of the building
 		\item Provide an access road from the edge of the Site to the car park.
 		\item Add street lighting, trees, and other components from the 'Entourage', 'Site' and 'Planting' libraries as necessary 
 	\end{itemize}
 	\item The filenames should be of the form used in NA-2021 to I.S. EN ISO 19650-2-2018
-.  In this case, it will \textit{CADD06021-03-X-X-XXX-SP-\#\#\#-AR-0020-P9-D-0}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'CADD06021-03-X-X-XXX-SP-920-AR-0020-P9-D-0'}, for K-number K20001920.
+.  In this case, it will \textit{CADD06021-03-X-X-XXX-SP-\#\#\#-AR-0020-P9-D-2}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'CADD06021-03-X-X-XXX-SP-920-AR-0020-P9-D-2'}, for K-number K20001920.
 \end{enumerate}
 
 \newpage
@@ -150,7 +150,7 @@ Using your Assignment 1 Building, create or export the following file types from
 	\item Export the floor plans in .gbXML format, used in Energy Analysis
 	\item Make a .pdf of the floor plan
 \end{enumerate}
-The filenames should be of the form used in NA-2021 to I.S. EN ISO 19650-2-2018.  In this case, it will be \textit{CADD06021-03-X-X-XXX-SP-\#\#\#-AR-0030-P9-D-0}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'CADD06021-03-X-X-XXX-SP-920-AR-0030-P9-D-0'}, for K-number K20001920. \\
+The filenames should be of the form used in NA-2021 to I.S. EN ISO 19650-2-2018.  In this case, it will be \textit{CADD06021-03-X-X-XXX-SP-\#\#\#-AR-0030-P9-D-2}, where \#\#\# is replaced by the last 3 digits of your K-number. An example would be \textbf{'CADD06021-03-X-X-XXX-SP-920-AR-0030-P9-D-2'}, for K-number K20001920. \\
 
 \begin{tabularx}{\textwidth}{ |c|X| }
 	\hline
